--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script language="javascript" type="text/javascript" src="js/my.js"></script>
 </head>
 <body>
-  <input type="file" id="fileinput" />
+  <input type="file" id="fileinput" multiple="multiple" />
 
 </body>
 </html>
